message PingMessage {
  required string message = 1;
}