message PongMessage {
  required string message = 1;
}