import "ServerMessage.proto";

message WebSocketMessage {
  repeated ServerMessage messages = 1;
}